* scripts/mknmz.in (namazu_core): Fix progress messaging 	bug. [namazu-dev 1621]

--- a/README
+++ b/README
@@ -36,7 +36,7 @@ Request for comments
    writing, please teach me kindly :-).
 
 
-You can get latest news about Namazu from
+You can get the latest news about Namazu at:
 
   <http://openlab.ring.gr.jp/namazu/>
 
