--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-02-16  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* scripts/mknmz.in (namazu_core): Fix progress messaging
+	bug. [namazu-dev 1621] 
+
 2000-02-15  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
   	* configure.in (AM_INIT_AUTOMAKE): Bumped version number to 1.9.15.
