--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2000-02-16  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* pl/conf.pl.in (ALLOW_REGEX): Include $HTML_SUFFIX.
+	Rewrite messages (halfdone).
 
 	* filter/html.pl (is_html): Abolished. [namazu-dev 1628]
 
