--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-02-16 19:22+0900\n"
+"POT-Creation-Date: 2000-02-16 21:53+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -192,14 +192,14 @@ msgid ""
 "namazu %s, a search program of Namazu.\n"
 "\n"
 "Usage: namazu [options] <query> [index]... \n"
-"    -n, --max=num        set number of documents shown at once.\n"
-"    -w, --whence=num     set first number of documents shown in results.\n"
+"    -n, --max=NUM        set number of documents shown to NUM.\n"
+"    -w, --whence=NUM     set first number of documents shown to NUM.\n"
 "    -l, --list           print results by listing format.\n"
 "    -s, --short          print results by short format.\n"
-"        --results=ext    set NMZ.result.ext for printing results.\n"
+"        --results=EXT    set NMZ.result.EXT for printing results.\n"
 "        --late           sort documents in late order.\n"
 "        --early          sort documents in early order.\n"
-"        --sort=method    set a sort method (score, date, field:name)\n"
+"        --sort=METHOD    set a sort METHOD (score, date, field:name)\n"
 "        --ascending      sort in ascending order (default: descending)\n"
 "    -a, --all            print all results.\n"
 "    -c, --count          print only number of hits.\n"
@@ -209,8 +209,8 @@ msgid ""
 "    -F, --form           force to print <form> ... </form> region.\n"
 "    -R, --no-replace     do not replace URI string.\n"
 "    -U, --no-decode-uri  do not decode URI when printing in a plain format.\n"
-"    -o, --output=file    set output file name.\n"
-"    -f, --config=file    set a pathname of a config file.\n"
+"    -o, --output=FILE    set the output file name to FILE.\n"
+"    -f, --config=FILE    set the config file name to FILE.\n"
 "    -C, --show-config    print current configuration.\n"
 "    -q, --quiet          do not display extra messages except search "
 "results.\n"
@@ -632,23 +632,23 @@ msgid ""
 "Target files:\n"
 "  -a, --all                target all files.\n"
 "  -e, --robots-txt         exclude files which is excluded by robots.txt.\n"
-"  -t, --media-type=mtype   set a media type for all target files "
-"explicitly.\n"
+"  -t, --media-type=MTYPE   set the media type for all target files to "
+"MTYPE.\n"
 "  -h, --mailnews           same as --media-type='message/rfc822'\n"
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
-"  -F, --target-list=file   load a file which contains list of target files.\n"
-"      --allow=regex        set a regex for file names which will be "
+"  -F, --target-list=FILE   load FILE which contains a list of target files.\n"
+"      --allow=PATTERN      set PATTERN for file names which will be "
 "allowed.\n"
-"      --deny=regex         set a regex for file names which will be denied.\n"
-"      --exclude=regex      set a regex for pathnames which will be "
+"      --deny=PATTERN       set PATTERN for file names which will be denied.\n"
+"      --exclude=PATTERN    set PATTERN for pathnames which will be "
 "excluded.\n"
 "  -M, --meta               handle HTML meta tags for field-specified "
 "search.\n"
-"  -r, --replace=code       set a code for replacing URI.\n"
+"  -r, --replace=CODE       set CODE for replacing URI.\n"
 "  -o, --ole                use OLE document filters. (works on Windows "
 "only)\n"
-"      --mtime=int          limit by date, ( minus number for recent, i.e.,\n"
+"      --mtime=NUM          limit by date, (minus NUM for recent, i.e.,\n"
 "                           -50 for recent 50 days, 50 for older than 50.)\n"
 "\n"
 "Morphological Analysis:\n"
@@ -667,16 +667,16 @@ msgid ""
 "  -x, --no-heading-summary do not make summary with HTML's headings.\n"
 "\n"
 "Index Construction:\n"
-"      --update=index       set an index for updating.\n"
+"      --update=INDEX       set INDEX for updating.\n"
 "  -Y, --no-delete          do not detect removed documents.\n"
 "  -Z, --no-update          do not detect update and deleted documents.\n"
 "\n"
 "Miscellaneous:\n"
 "  -s, --checkpoint         turn on the checkpoint mechanism.\n"
-"  -f, --config=file        set a pathname of a config file.\n"
-"  -I, --include=file       include your customization file.\n"
-"  -O, --output-dir=dir     set a directory to output the index.\n"
-"  -T, --template-dir=dir   set a directory having NMZ.{head,foot,body}.*.\n"
+"  -f, --config=FILE        set the config file to FILE.\n"
+"  -I, --include=FILE       include your customization FILE.\n"
+"  -O, --output-dir=DIR     set DIR to output the index.\n"
+"  -T, --template-dir=DIR   set DIR having NMZ.{head,foot,body}.*.\n"
 "  -q, --quiet              suppress status messages during execution.\n"
 "  -v, --version            show the version of namazu and exit.\n"
 "  -V, --verbose            be verbose.\n"
