--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-02-16 19:22+0900\n"
+"POT-Creation-Date: 2000-02-16 21:53+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -188,14 +188,14 @@ msgid ""
 "namazu %s, a search program of Namazu.\n"
 "\n"
 "Usage: namazu [options] <query> [index]... \n"
-"    -n, --max=num        set number of documents shown at once.\n"
-"    -w, --whence=num     set first number of documents shown in results.\n"
+"    -n, --max=NUM        set number of documents shown to NUM.\n"
+"    -w, --whence=NUM     set first number of documents shown to NUM.\n"
 "    -l, --list           print results by listing format.\n"
 "    -s, --short          print results by short format.\n"
-"        --results=ext    set NMZ.result.ext for printing results.\n"
+"        --results=EXT    set NMZ.result.EXT for printing results.\n"
 "        --late           sort documents in late order.\n"
 "        --early          sort documents in early order.\n"
-"        --sort=method    set a sort method (score, date, field:name)\n"
+"        --sort=METHOD    set a sort METHOD (score, date, field:name)\n"
 "        --ascending      sort in ascending order (default: descending)\n"
 "    -a, --all            print all results.\n"
 "    -c, --count          print only number of hits.\n"
@@ -205,8 +205,8 @@ msgid ""
 "    -F, --form           force to print <form> ... </form> region.\n"
 "    -R, --no-replace     do not replace URI string.\n"
 "    -U, --no-decode-uri  do not decode URI when printing in a plain format.\n"
-"    -o, --output=file    set output file name.\n"
-"    -f, --config=file    set a pathname of a config file.\n"
+"    -o, --output=FILE    set the output file name to FILE.\n"
+"    -f, --config=FILE    set the config file name to FILE.\n"
 "    -C, --show-config    print current configuration.\n"
 "    -q, --quiet          do not display extra messages except search "
 "results.\n"
@@ -218,14 +218,14 @@ msgstr ""
 "namazu %s, Namazu の検索プログラム\n"
 "\n"
 "使い方: namazu [options] <query> [index]...\n"
-"    -n, --max=num           一度に表示する件数\n"
-"    -w, --whence=num        表示する検索結果の先頭番号\n"
+"    -n, --max=NUM           一度に表示する件数\n"
+"    -w, --whence=NUM        表示する検索結果の先頭番号\n"
 "    -l, --list              検索結果を URI・パス名をリストで出力する\n"
 "    -s, --short             短い書式で出力する\n"
-"        --result=ext        結果表示に用いる NMZ.result.ext を指定する\n"
+"        --result=EXT        結果表示に用いる NMZ.result.EXT を指定する\n"
 "        --late              検索結果を新しい順にソートする\n"
 "        --early             検索結果を古い順にソートする\n"
-"        --sort=method       ソート方法を指定する (score, date, field:name)\n"
+"        --sort=METHOD       ソート方法を指定する (score, date, field:name)\n"
 "        --ascending         ソートの方向を昇順にする (標準は降順)\n"
 "    -a, --all               検索結果をすべて表示する\n"
 "    -c, --count             ヒット数のみを表示する\n"
@@ -235,8 +235,8 @@ msgstr ""
 "    -F, --form              <form> ... </form> の部分を強制的に表示する\n"
 "    -R, --no-replace        URI の置き換えを行わない\n"
 "    -U, --no-decode-uri     URI encode の復元を行わない\n"
-"    -o, --output=file       指定したファイルに検索結果を出力する\n"
-"    -f, --config=file       設定ファイルを指定する\n"
+"    -o, --output=FILE       指定したファイルに検索結果を出力する\n"
+"    -f, --config=FILE       設定ファイルを指定する\n"
 "    -C, --show-config       設定を表示する\n"
 "    -q, --quiet             検索結果以外のメッセージを表示しない\n"
 "    -v, --version           ヴァージョンを表示する\n"
@@ -609,23 +609,23 @@ msgid ""
 "Target files:\n"
 "  -a, --all                target all files.\n"
 "  -e, --robots-txt         exclude files which is excluded by robots.txt.\n"
-"  -t, --media-type=mtype   set a media type for all target files "
-"explicitly.\n"
+"  -t, --media-type=MTYPE   set the media type for all target files to "
+"MTYPE.\n"
 "  -h, --mailnews           same as --media-type='message/rfc822'\n"
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
-"  -F, --target-list=file   load a file which contains list of target files.\n"
-"      --allow=regex        set a regex for file names which will be "
+"  -F, --target-list=FILE   load FILE which contains a list of target files.\n"
+"      --allow=PATTERN      set PATTERN for file names which will be "
 "allowed.\n"
-"      --deny=regex         set a regex for file names which will be denied.\n"
-"      --exclude=regex      set a regex for pathnames which will be "
+"      --deny=PATTERN       set PATTERN for file names which will be denied.\n"
+"      --exclude=PATTERN    set PATTERN for pathnames which will be "
 "excluded.\n"
 "  -M, --meta               handle HTML meta tags for field-specified "
 "search.\n"
-"  -r, --replace=code       set a code for replacing URI.\n"
+"  -r, --replace=CODE       set CODE for replacing URI.\n"
 "  -o, --ole                use OLE document filters. (works on Windows "
 "only)\n"
-"      --mtime=int          limit by date, ( minus number for recent, i.e.,\n"
+"      --mtime=NUM          limit by date, (minus NUM for recent, i.e.,\n"
 "                           -50 for recent 50 days, 50 for older than 50.)\n"
 "\n"
 "Morphological Analysis:\n"
@@ -644,16 +644,16 @@ msgid ""
 "  -x, --no-heading-summary do not make summary with HTML's headings.\n"
 "\n"
 "Index Construction:\n"
-"      --update=index       set an index for updating.\n"
+"      --update=INDEX       set INDEX for updating.\n"
 "  -Y, --no-delete          do not detect removed documents.\n"
 "  -Z, --no-update          do not detect update and deleted documents.\n"
 "\n"
 "Miscellaneous:\n"
 "  -s, --checkpoint         turn on the checkpoint mechanism.\n"
-"  -f, --config=file        set a pathname of a config file.\n"
-"  -I, --include=file       include your customization file.\n"
-"  -O, --output-dir=dir     set a directory to output the index.\n"
-"  -T, --template-dir=dir   set a directory having NMZ.{head,foot,body}.*.\n"
+"  -f, --config=FILE        set the config file to FILE.\n"
+"  -I, --include=FILE       include your customization FILE.\n"
+"  -O, --output-dir=DIR     set DIR to output the index.\n"
+"  -T, --template-dir=DIR   set DIR having NMZ.{head,foot,body}.*.\n"
 "  -q, --quiet              suppress status messages during execution.\n"
 "  -v, --version            show the version of namazu and exit.\n"
 "  -V, --verbose            be verbose.\n"
@@ -669,20 +669,19 @@ msgstr ""
 "対象ファイル:\n"
 "  -a, --all                すべてのファイルを対象とする\n"
 "  -e, --robots-txt         ロボットよけされているファイルを除外する\n"
-"  -t, --media-type=mtype   対象ファイルの文書形式を指定する\n"
+"  -t, --media-type=MTYPE   対象ファイルの文書形式を指定する\n"
 "  -h, --mailnews           --media-type='message/rfc822' と同じ\n"
 "      --mhonarc            --media-type='text/html; x-type=mhonarc' と同じ\n"
 "  -A, --htaccess           .htaccess で制限されたファイルを除外する\n"
-"  -F, --target-list=file   インデックス対象のファイルのリストを読み込む\n"
-"      --allow=regex        対象ファイル名の正規表現を指定する\n"
-"      --deny=regex         除外するファイル名の正規表現を指定する\n"
-"      --exclude=regex      除外するパス名の正規表現を指定する\n"
+"  -F, --target-list=FILE   インデックス対象のファイルのリストを読み込む\n"
+"      --allow=PATTERN      対象ファイル名の正規表現を指定する\n"
+"      --deny=PATTERN       除外するファイル名の正規表現を指定する\n"
+"      --exclude=PATTERN    除外するパス名の正規表現を指定する\n"
 "  -M, --meta               HTMLの metaタグをフィールド指定検索に用いる\n"
-"  -r, --replace=code       URIを置換するためのコードを指定する\n"
+"  -r, --replace=CODE       URIを置換するためのコードを指定する\n"
 "  -o, --ole                OLEの文書フィルタを用いる (Windows環境のみ)\n"
-"      --mtime=int          変更日制限 (int が 負で最近、正で古いものだけ、\n"
-"                           例: -50 で 50 日以内、50 で 50 "
-"日より古いものだけ)\n"
+"      --mtime=INT          変更日制限 (int が 負で最近、正で古いものだけ、\n"
+"                           例: -50 で 50 日以内、50 で 50 日より古いものだけ)\n"
 "\n"
 "形態素解析:\n"
 "  -c, --use-chasen        日本語の単語のわかち書きに ChaSen を用いる\n"
@@ -701,16 +700,16 @@ msgstr ""
 "\n"
 "\n"
 "インデックス作成:\n"
-"      --update=index        更新するインデックスを指定する\n"
+"      --update=INDEX        更新するインデックスを指定する\n"
 "  -Y, --no-delete           削除された文書の検出を行わない\n"
 "  -Z, --no-update           文書の更新・削除を反映しない\n"
 "\n"
 "その他:\n"
 "  -s, --checkpoint        チェックポイント機構を作動させる\n"
-"  -f, --config=file       設定ファイルを指定する\n"
-"  -I, --include=file      カスタマイズ用ファイルを読み込む\n"
-"  -O, --output-dir=dir    インデックスの出力先を指定する\n"
-"  -T, --template-dir=dir  NMZ.{head,foot,body}.* のディレクトリを指定する\n"
+"  -f, --config=FILE       設定ファイルを指定する\n"
+"  -I, --include=FILE      カスタマイズ用ファイルを読み込む\n"
+"  -O, --output-dir=DIR    インデックスの出力先を指定する\n"
+"  -T, --template-dir=DIR  NMZ.{head,foot,body}.* のディレクトリを指定する\n"
 "  -q, --quiet             インデックス処理の最中にメッセージを表示しない\n"
 "  -v, --version           ヴァージョンを表示する\n"
 "  -V, --verbose           口やかましいモード\n"
