--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2000-02-16  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* src/rcfile.c (loaded_rcfiles): Be static.
+
+	* nmz/search.c (open_index_files): Be static.
+
+	* src/rcfile.c (load_rcfile): Be static.
+
+	* src/Makefile.am (common_SOURCES): Remove em.h
+
+	* src/em.h: Removed.
+	
+	* nmz/codeconv.c (zen2han): Renamed from nmz_zen2han and be static.
+
 	* src/usage.c (show_usage): Change usage. [namazu-dev 1632]
 
 	* pl/usage.pl: Likewise.
