--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-02-18 13:32+0900\n"
+"POT-Creation-Date: 2000-02-18 13:35+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -658,10 +658,11 @@ msgid ""
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
 "  -F, --target-list=FILE   load FILE which contains a list of target files.\n"
-"      --allow=PATTERN      set PATTERN for file names which will be "
+"      --allow=PATTERN      set PATTERN for file names which should be "
 "allowed.\n"
-"      --deny=PATTERN       set PATTERN for file names which will be denied.\n"
-"      --exclude=PATTERN    set PATTERN for pathnames which will be "
+"      --deny=PATTERN       set PATTERN for file names which should be "
+"denied.\n"
+"      --exclude=PATTERN    set PATTERN for pathnames which should be "
 "excluded.\n"
 "  -M, --meta               handle HTML meta tags for field-specified "
 "search.\n"
@@ -717,8 +718,8 @@ msgstr ""
 "      --mhonarc            --media-type='text/html; x-type=mhonarc' と同じ\n"
 "  -A, --htaccess           .htaccess で制限されたファイルを除外する\n"
 "  -F, --target-list=FILE   インデックス対象のファイルのリストを読み込む\n"
-"      --allow=PATTERN      対象ファイル名の正規表現を指定する\n"
-"      --deny=PATTERN       除外するファイル名の正規表現を指定する\n"
+"      --allow=PATTERN      対象とするファイル名の正規表現を指定する\n"
+"      --deny=PATTERN       拒絶するファイル名の正規表現を指定する\n"
 "      --exclude=PATTERN    除外するパス名の正規表現を指定する\n"
 "  -M, --meta               HTMLの metaタグをフィールド指定検索に用いる\n"
 "  -r, --replace=CODE       URIを置換するためのコードを指定する\n"
