--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-02-18 13:32+0900\n"
+"POT-Creation-Date: 2000-02-18 13:35+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -600,10 +600,11 @@ msgid ""
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
 "  -F, --target-list=FILE   load FILE which contains a list of target files.\n"
-"      --allow=PATTERN      set PATTERN for file names which will be "
+"      --allow=PATTERN      set PATTERN for file names which should be "
 "allowed.\n"
-"      --deny=PATTERN       set PATTERN for file names which will be denied.\n"
-"      --exclude=PATTERN    set PATTERN for pathnames which will be "
+"      --deny=PATTERN       set PATTERN for file names which should be "
+"denied.\n"
+"      --exclude=PATTERN    set PATTERN for pathnames which should be "
 "excluded.\n"
 "  -M, --meta               handle HTML meta tags for field-specified "
 "search.\n"
