--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-02-18 13:32+0900\n"
+"POT-Creation-Date: 2000-02-18 13:35+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -684,10 +684,11 @@ msgid ""
 "      --mhonarc            same as --media-type='text/html; x-type=mhonarc'\n"
 "  -A, --htaccess           exclude files restricted by .htaccess.\n"
 "  -F, --target-list=FILE   load FILE which contains a list of target files.\n"
-"      --allow=PATTERN      set PATTERN for file names which will be "
+"      --allow=PATTERN      set PATTERN for file names which should be "
 "allowed.\n"
-"      --deny=PATTERN       set PATTERN for file names which will be denied.\n"
-"      --exclude=PATTERN    set PATTERN for pathnames which will be "
+"      --deny=PATTERN       set PATTERN for file names which should be "
+"denied.\n"
+"      --exclude=PATTERN    set PATTERN for pathnames which should be "
 "excluded.\n"
 "  -M, --meta               handle HTML meta tags for field-specified "
 "search.\n"
