--- a/man/mknmz.1
+++ b/man/mknmz.1
@@ -31,13 +31,13 @@ exclude files restricted by .htaccess.
 load FILE which contains a list of target files.
 .TP
 \fB\-\-allow\fR=\fIPATTERN\fR
-set PATTERN for file names which will be allowed.
+set PATTERN for file names which should be allowed.
 .TP
 \fB\-\-deny\fR=\fIPATTERN\fR
-set PATTERN for file names which will be denied.
+set PATTERN for file names which should be denied.
 .TP
 \fB\-\-exclude\fR=\fIPATTERN\fR
-set PATTERN for pathnames which will be excluded.
+set PATTERN for pathnames which should be excluded.
 .TP
 \fB\-M\fR, \fB\-\-meta\fR
 handle HTML meta tags for field-specified search.
