--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2000-02-18  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* doc/ja/Makefile.am (EXTRA_DIST): Add namazu.css.
+	(html_DATA): Remove namazu.css
+
+	* filter/gfilter.pl (filename_to_title): Do not use
+	$conf::TEXT_TITLE. 
+
 	* pl/usage.pl: Change usage a bit.
 
 	* scripts/mknmz.in (generate_uri): Fix $DIRECTORY_INDEX handling.
