--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2000-02-19  Ken-ichi Hirose  <kenzo-@tama.or.jp>
+
+	* nmz/hlist.c: Change include point and defined HAVE_UNISTD_H 
+	for unistd.h.
+
+	* nmz/libnamazu.c: Change include point and defined HAVE_UNISTD_H 
+	for unistd.h.
+
+	* nmz/search.c: Change include point and defined HAVE_UNISTD_H 
+	for unistd.h.
+
+	* src/cgi.c (get_query_string): Add iregal function for MS servers.
+
+	* src/namazu-cgi.c (main): Add iregal function for MS servers.
+
 2000-02-18  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* doc/ja/Makefile.am (EXTRA_DIST): Add namazu.css.
