--- a/NEWS
+++ b/NEWS
@@ -1,13 +1,14 @@
-1999-09-19  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+Overview of Changes in Namazu 2.0 - Feb 20, 2000
 
-	* Gettextized!
-
-1999-03-12  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
-
-	* Namazu Web site has been moved! 
-	New URL: <http://openlab.ring.gr.jp/namazu/>
-
-1999-01-21  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
-
-	* Namazu Web site has been moved! 
-	New URL: <http://openlab.ring.gr.jp/namazu/>
+* NLS support using GNU gettext is added.
+* Using GNU automake-1.4.
+* Namazu core search engine library is provided.
+* Using GNU libtool-1.3.3.
+* Access control support by NMZ.access.
+* Perl XSUB module support for mknmz is added.
+* Using File::MMagic perl module for guess file type.
+* Many filters for file processing. (MS Word, PDF, TeX etc.)
+* Check point (Re-execute) support for mknmz.
+* Replace URL basename in namazurc.
+* New nmz-config helper script.
+* Documentations are rewritten.
