--- a/File-MMagic/ChangeLog
+++ b/File-MMagic/ChangeLog
@@ -1,3 +1,7 @@
+2000-02-19  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* MMagic.pm: Change URI of Namazu website in a comment.
+
 1999-12-01  Ryuji Abe  <raeva@t3.rim.or.jp>
 
 	* perl-File-MMagic.spec: New File for build RPM package.
